# claude-p

./: LICENSE  README.md  claude-p.py  pyproject.toml
.github/workflows/: publish.yml
docs/: development.md
src/claude_p/: __init__.py  cli.py  sdk.py  types.py
tests/: test_sdk.py
