[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "claude-p"
version = "0.1.1"
description = "Claude -p compatible wrapper backed by interactive Claude Code subscription sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Equality Machine" }
]
keywords = ["claude", "claude-code", "agent", "sdk", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Equality-Machine/claude-p"
Repository = "https://github.com/Equality-Machine/claude-p"
Issues = "https://github.com/Equality-Machine/claude-p/issues"

[project.scripts]
claude-p = "claude_p.cli:main"
"claude-p.py" = "claude_p.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_p"]

